// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildOSSFeatures returns features excluding reporting subfeatures 1`] = `
Array [
  Object {
    "id": "discover",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dev_tools",
    "subFeatures": undefined,
  },
  Object {
    "id": "advancedSettings",
    "subFeatures": undefined,
  },
  Object {
    "id": "indexPatterns",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedObjectsManagement",
    "subFeatures": undefined,
  },
]
`;

exports[`buildOSSFeatures returns features including reporting subfeatures 1`] = `
Array [
  Object {
    "id": "discover",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Generate CSV reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "visualize",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "gold",
                "name": "Generate PDF or PNG reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dashboard",
    "subFeatures": Array [
      Object {
        "name": "Short URLs",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "id": "url_create",
                "includeIn": "all",
                "name": "Create Short URLs",
                "savedObject": Object {
                  "all": Array [
                    "url",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "createShortUrl",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Store Search Sessions",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "store_search_session",
                ],
                "id": "store_search_session",
                "includeIn": "all",
                "management": Object {
                  "kibana": Array [
                    "search_sessions",
                  ],
                },
                "name": "Store Search Sessions",
                "savedObject": Object {
                  "all": Array [
                    "search-session",
                  ],
                  "read": Array [],
                },
                "ui": Array [
                  "storeSearchSession",
                ],
              },
            ],
          },
        ],
      },
      Object {
        "name": "Reporting",
        "privilegeGroups": Array [
          Object {
            "groupType": "independent",
            "privileges": Array [
              Object {
                "api": Array [
                  "generateReport",
                ],
                "id": "generate_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "minimumLicense": "gold",
                "name": "Generate PDF or PNG reports",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "generateScreenshot",
                ],
              },
              Object {
                "api": Array [
                  "downloadCsv",
                ],
                "id": "download_csv_report",
                "includeIn": "all",
                "management": Object {
                  "insightsAndAlerting": Array [
                    "reporting",
                  ],
                },
                "name": "Download CSV reports from Saved Search panels",
                "savedObject": Object {
                  "all": Array [],
                  "read": Array [],
                },
                "ui": Array [
                  "downloadCsv",
                ],
              },
            ],
          },
        ],
      },
    ],
  },
  Object {
    "id": "dev_tools",
    "subFeatures": undefined,
  },
  Object {
    "id": "advancedSettings",
    "subFeatures": undefined,
  },
  Object {
    "id": "indexPatterns",
    "subFeatures": undefined,
  },
  Object {
    "id": "savedObjectsManagement",
    "subFeatures": undefined,
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the advancedSettings feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "config",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the dashboard feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "store_search_session",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "read": Array [],
      },
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "map",
          "tag",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "map",
          "dashboard",
          "query",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the dev_tools feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the discover feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "fileUpload:analyzeFile",
        "store_search_session",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "read": Array [],
      },
      "catalogue": Array [
        "discover",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "search",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "show",
        "save",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the indexPatterns feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "index-pattern",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the savedObjectsManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "foo",
          "bar",
        ],
        "read": Array [],
      },
      "ui": Array [
        "read",
        "edit",
        "delete",
        "copyIntoSpace",
        "shareIntoSpace",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "foo",
          "bar",
        ],
      },
      "ui": Array [
        "read",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a basic license returns the visualize feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "read": Array [],
      },
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "visualization",
          "query",
          "lens",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "tag",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "query",
          "lens",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the advancedSettings feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "config",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "advanced_settings",
      ],
      "management": Object {
        "kibana": Array [
          "settings",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the dashboard feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "store_search_session",
      ],
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "read": Array [],
      },
      "catalogue": Array [
        "dashboard",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "dashboard",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "map",
          "tag",
        ],
      },
      "ui": Array [
        "createNew",
        "show",
        "showWriteControls",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "dashboards",
        "kibana",
      ],
      "catalogue": Array [
        "dashboard",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "canvas-workpad",
          "lens",
          "map",
          "dashboard",
          "query",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the dev_tools feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "console",
      ],
      "app": Array [
        "dev_tools",
        "kibana",
      ],
      "catalogue": Array [
        "console",
        "searchprofiler",
        "grokdebugger",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the discover feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [
        "fileUpload:analyzeFile",
        "store_search_session",
      ],
      "app": Array [
        "discover",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "read": Array [],
      },
      "catalogue": Array [
        "discover",
      ],
      "management": Object {
        "kibana": Array [
          "search_sessions",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "search",
          "query",
          "url",
          "search-session",
        ],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [
        "show",
        "save",
        "saveQuery",
        "createShortUrl",
        "storeSearchSession",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "discover",
        "kibana",
      ],
      "catalogue": Array [
        "discover",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "query",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the indexPatterns feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "index-pattern",
        ],
        "read": Array [],
      },
      "ui": Array [
        "save",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "indexPatterns",
      ],
      "management": Object {
        "kibana": Array [
          "indexPatterns",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
        ],
      },
      "ui": Array [],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the savedObjectsManagement feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [
          "foo",
          "bar",
        ],
        "read": Array [],
      },
      "ui": Array [
        "read",
        "edit",
        "delete",
        "copyIntoSpace",
        "shareIntoSpace",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "api": Array [
        "copySavedObjectsToSpaces",
      ],
      "app": Array [
        "kibana",
      ],
      "catalogue": Array [
        "saved_objects",
      ],
      "management": Object {
        "kibana": Array [
          "objects",
        ],
      },
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "foo",
          "bar",
        ],
      },
      "ui": Array [
        "read",
      ],
    },
    "privilegeId": "read",
  },
]
`;

exports[`buildOSSFeatures with a enterprise license returns the visualize feature augmented with appropriate sub feature privileges 1`] = `
Array [
  Object {
    "privilege": Object {
      "alerting": Object {
        "alert": Object {
          "all": Array [],
          "read": Array [],
        },
        "rule": Object {
          "all": Array [],
          "read": Array [],
        },
      },
      "api": Array [],
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "cases": Object {
        "all": Array [],
        "read": Array [],
      },
      "catalogue": Array [
        "visualize",
      ],
      "management": Object {},
      "savedObject": Object {
        "all": Array [
          "visualization",
          "query",
          "lens",
          "url",
        ],
        "read": Array [
          "index-pattern",
          "search",
          "tag",
        ],
      },
      "ui": Array [
        "show",
        "delete",
        "save",
        "saveQuery",
        "createShortUrl",
      ],
    },
    "privilegeId": "all",
  },
  Object {
    "privilege": Object {
      "app": Array [
        "visualize",
        "lens",
        "kibana",
      ],
      "catalogue": Array [
        "visualize",
      ],
      "savedObject": Object {
        "all": Array [],
        "read": Array [
          "index-pattern",
          "search",
          "visualization",
          "query",
          "lens",
          "tag",
        ],
      },
      "ui": Array [
        "show",
      ],
    },
    "privilegeId": "read",
  },
]
`;
